--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <!--
+    Use polifill.io to request new JS features.
+    Currently used: Array.prototype.at
+    -->
+    <script src="https://polyfill.io/v3/polyfill.min.js?version=3.111.0&features=Array.prototype.at"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
