--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Derlin's reading statistics !"
-    />
+    <meta name="description" content="Derlin's reading statistics !" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -33,7 +30,13 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root">
+      <!-- this div will be replaced as soon as React first renders -->
+      <!-- original image: https://thumbs.gfycat.com/InnocentFlusteredAquaticleech-size_restricted.gif -->
+      <div style="display: flex; justify-content: center; align-items: center; height: 100vh">
+        <img src="loading.gif" />
+      </div>
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
