fix: use absolute URL for loading animation

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
       <!-- this div will be replaced as soon as React first renders -->
       <!-- original image: https://thumbs.gfycat.com/InnocentFlusteredAquaticleech-size_restricted.gif -->
       <div style="display: flex; justify-content: center; align-items: center; height: 100vh">
-        <img src="loading.gif" />
+        <img src="%PUBLIC_URL%/loading.gif" />
       </div>
     </div>
     <!--
