fix: load Trebuchet font over https
Or else it is blocked in github.io (mixed-content).

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,21 @@
     <meta name="description" content="Derlin's reading statistics !" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!-- fonts -->
-    <link href="http://fonts.cdnfonts.com/css/trebuchet-ms-2" rel="stylesheet">
+    <style>
+    /* from http://fonts.cdnfonts.com/css/trebuchet-ms-2 (http only) */
+    @font-face {
+        font-family: 'Trebuchet MS';
+        font-style: normal;
+        font-weight: 400;
+        src: local('Trebuchet MS'), url('https://fonts.cdnfonts.com/s/12558/trebuc.woff') format('woff');
+    }
+    @font-face {
+        font-family: 'Trebuchet MS';
+        font-style: italic;
+        font-weight: 400;
+        src: local('Trebuchet MS'), url('https://fonts.cdnfonts.com/s/12558/Trebuchet-MS-Italic.woff') format('woff');
+    }
+    </style>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
