feat: add social preview and better SEO

--- a/public/index.html
+++ b/public/index.html
@@ -4,24 +4,43 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Derlin's reading statistics !" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta name="theme-color" content="#ffffff" />
+    <title>Derlin's Readlog</title>
+    <meta
+      name="description"
+      content="Visualizing years in books. Follow Derlin's reading journey through data-driven timelines, book stats, and trends."
+    />
+    <!-- SEO -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="%PUBLIC_URL%/" />
+    <meta property="og:title" content="Derlin's Readlog" />
+    <meta
+      property="og:description"
+      content="Visualizing years in books. Follow Derlin's reading journey through data-driven timelines, book stats, and trends."
+    />
+    <meta property="og:image" content="%PUBLIC_URL%/preview.png" />
+
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:title" content="Derlin's Readlog" />
+    <meta property="twitter:image" content="%PUBLIC_URL%/preview.png" />
+
     <!-- fonts -->
     <style>
-    /* from http://fonts.cdnfonts.com/css/trebuchet-ms-2 (http only) */
-    @font-face {
+      /* from http://fonts.cdnfonts.com/css/trebuchet-ms-2 (http only) */
+      @font-face {
         font-family: 'Trebuchet MS';
         font-style: normal;
         font-weight: 400;
-        src: local('Trebuchet MS'), url('https://fonts.cdnfonts.com/s/12558/trebuc.woff') format('woff');
-    }
-    @font-face {
+        src: local('Trebuchet MS'),
+          url('https://fonts.cdnfonts.com/s/12558/trebuc.woff') format('woff');
+      }
+      @font-face {
         font-family: 'Trebuchet MS';
         font-style: italic;
         font-weight: 400;
-        src: local('Trebuchet MS'), url('https://fonts.cdnfonts.com/s/12558/Trebuchet-MS-Italic.woff') format('woff');
-    }
+        src: local('Trebuchet MS'),
+          url('https://fonts.cdnfonts.com/s/12558/Trebuchet-MS-Italic.woff') format('woff');
+      }
     </style>
     <!--
       manifest.json provides metadata used when your web app is installed on a
