feat: migrate to vite

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
+      Notice the use of %BASE_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
 
@@ -62,6 +62,7 @@
     Currently used: Array.prototype.at
     -->
     <script src="https://polyfill.io/v3/polyfill.min.js?version=3.111.0&features=Array.prototype.at"></script>
+    <script type="module" src="/src/index.jsx"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
