chore: add canonical meta tag

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       name="description"
       content="Visualizing years in books. Follow Derlin's reading journey through data-driven timelines, book stats, and trends."
     />
+    <link rel="canonical" href="%PUBLIC_URL%" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!-- SEO -->
     <meta property="og:type" content="website" />
